--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MTrack-Tracks Your Money</title>
-  <link rel="icon" href="../MY-SITE/avataaars.ico">
+  <link rel="icon" href="avataaars.ico">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
@@ -20,7 +20,7 @@
     <a class="navbar-brand mb-0 h1" href="index.html">
       <img src="../MY-SITE/avataaars.svg" width="30" height="30" class="d-inline-block align-top" alt="LOGO"
         loading="lazy">
-      MTrack-Tracks Your Money
+      PTrack-Tracks Your Every Single Penny
     </a>
     <span class="navbar-brand mb-0 h1" id ="headingText"></span>
   </nav>
