--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <body>
   <nav class="navbar sticky-top navbar-dark bg-primary">
     <a class="navbar-brand mb-0 h1" href="index.html">
-      <img src="../MY-SITE/avataaars.svg" width="30" height="30" class="d-inline-block align-top" alt="LOGO"
+      <img src="avataaars.svg" width="30" height="30" class="d-inline-block align-top" alt="LOGO"
         loading="lazy">
-      PTrack-Tracks Your Every Single Penny
+      MTrack-Tracks Your Every Money
     </a>
     <span class="navbar-brand mb-0 h1" id ="headingText"></span>
   </nav>
