--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <a class="navbar-brand mb-0 h1" href="index.html">
       <img src="avataaars.svg" width="30" height="30" class="d-inline-block align-top" alt="LOGO"
         loading="lazy">
-      MTrack-Tracks Your Every Money
+      MTrack-Tracks Your Money
     </a>
     <span class="navbar-brand mb-0 h1" id ="headingText"></span>
   </nav>
