--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
             <span class="input-group-text" id="basic-addon1">Category</span>
           </div>
           <input type="text" id="inputDesc" class="form-control" placeholder="Category" aria-label="Category"
-            aria-describedby="basic-addon1">
+            aria-describedby="basic-addon1" required>
         </div>
 
         <div class="input-group mb-3">
           <input type="number" id="inputValue" class="form-control" placeholder="Amount" aria-label="Amount"
-            aria-describedby="basic-addon1">
+            aria-describedby="basic-addon1" required>
           <div class="input-group-append">
             <span class="input-group-text" id="basic-addon1">@</span>
           </div>
