--- a/index.html
+++ b/index.html
@@ -28,17 +28,18 @@
   <div class="container-fluid" style="background-color: #ffffff; min-height: 100vh;">
     <div class="container">
       <div class="jumbotron mt-4">
+        <form>
         <div class="input-group mb-3">
           <div class="input-group-prepend">
             <span class="input-group-text" id="basic-addon1">Category</span>
           </div>
           <input type="text" id="inputDesc" class="form-control" placeholder="Category" aria-label="Category"
-            aria-describedby="basic-addon1" required>
+            aria-describedby="basic-addon1" required/>
         </div>
 
         <div class="input-group mb-3">
           <input type="number" id="inputValue" class="form-control" placeholder="Amount" aria-label="Amount"
-            aria-describedby="basic-addon1" required>
+            aria-describedby="basic-addon1" required/>
           <div class="input-group-append">
             <span class="input-group-text" id="basic-addon1">@</span>
           </div>
@@ -52,7 +53,7 @@
             <button id="btnCounter" class="btn btn-outline-primary" type="button" id="button-addon2">Add</button>
           </div>
         </div>
-
+        </form>
       </div>
 
       <div>
